openvidu-components: Emitted event when refresh button is clicked

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
 				</mat-menu>
 
 				<div class="refresh-btn">
-					<button matSuffix mat-icon-button aria-label="Refresh">
+					<button matSuffix mat-icon-button aria-label="Refresh" (click)="refreshRecordings()">
 						<mat-icon>refresh</mat-icon>
 					</button>
 				</div>
