--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -75,6 +75,10 @@
 			<ov-background-effects-panel id="default-background-effects-panel"></ov-background-effects-panel>
 		</ng-template>
 
+		<ng-template #settingsPanel>
+			<ov-settings-panel id="default-settings-panel"></ov-settings-panel>
+		</ng-template>
+
 		<ng-template #activitiesPanel>
 			<ng-container *ngTemplateOutlet="openviduAngularActivitiesPanelTemplate"></ng-container>
 		</ng-template>
