--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -3,15 +3,8 @@
 	<!-- <span>OpenVidu Call</span> -->
 	<span class="spacer"></span>
 
-	<button mat-flat-button [matMenuTriggerFor]="menu" class="lang-button"  *ngIf="!isMinimal">
-		<span>{{langSelected?.name}}</span>
-		<mat-icon>expand_more</mat-icon>
-	</button>
-	<mat-menu #menu="matMenu">
-		<button mat-menu-item *ngFor="let lang of languages" (click)="onLangSelected(lang.ISO)">
-			<span>{{lang.name}}</span>
-		</button>
-	</mat-menu>
+	<ov-lang-selector *ngIf="!isMinimal"></ov-lang-selector>
+
 </mat-toolbar>
 
 <div class="container" id="prejoin-container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
@@ -50,98 +43,19 @@
 				<div fxFlex.gt-sm="100%" fxFlex.lt-md="33%" fxLayoutAlign="center center" fxFlexFill class="nickname-container">
 					<h4 *ngIf="windowSize >= 960">{{ 'PREJOIN.NICKNAME_SECTION' | translate }}</h4>
 					<hr *ngIf="windowSize >= 960" />
-					<div id="nickname-input-container">
-						<button mat-icon-button disabled>
-							<mat-icon>person</mat-icon>
-						</button>
-						<mat-form-field appearance="standard">
-							<mat-label>{{ 'PREJOIN.NICKNAME' | translate }}</mat-label>
-							<input
-								matInput
-								type="text"
-								maxlength="20"
-								[(ngModel)]="nickname"
-								(change)="updateNickname()"
-								autocomplete="off"
-							/>
-						</mat-form-field>
-					</div>
-					<!-- <mat-button-toggle-group style="border-radius: 20px">
-						<button mat-icon-button class="media-btn">
-							<mat-icon matTooltip="Mute your audio">mic</mat-icon>
-						</button>
-						<mat-button-toggle class="split-button-1 drop-down-button" [matMenuTriggerFor]="dropdownMenuOne">
-							<mat-icon>arrow_drop_down</mat-icon>
-						</mat-button-toggle>
-					</mat-button-toggle-group>
-
-					<mat-menu #dropdownMenuOne="matMenu">
-						<button mat-menu-item>One</button>
-						<button mat-menu-item>Two</button>
-						<button mat-menu-item>Three</button>
-					</mat-menu> -->
+					<ov-nickname-input></ov-nickname-input>
 				</div>
 
 				<div fxFlex.gt-sm="100%" fxFlex.lt-md="33%" fxLayoutAlign="center center" fxFlexFill class="buttons-container">
 					<h4 *ngIf="windowSize >= 960">{{ 'PREJOIN.DEVICE_SECTION' | translate }}</h4>
 					<hr *ngIf="windowSize >= 960" />
+
 					<!-- Camera -->
-					<div class="device-container-element">
-						<button
-							mat-icon-button
-							id="camera-button"
-							[disabled]="!hasVideoDevices || videoMuteChanging"
-							[class.warn-btn]="isVideoMuted"
-							(click)="toggleCam()"
-						>
-							<mat-icon *ngIf="!isVideoMuted" matTooltip="{{ 'TOOLBAR.MUTE_VIDEO' | translate }}" id="videocam"
-								>videocam</mat-icon
-							>
-							<mat-icon *ngIf="isVideoMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_VIDEO' | translate }}" id="videocam_off"
-								>videocam_off</mat-icon
-							>
-						</button>
-						<mat-form-field>
-							<mat-label>{{ 'PREJOIN.VIDEO_DEVICE' | translate }}</mat-label>
-							<mat-select
-								[disabled]="isVideoMuted || !hasVideoDevices"
-								[value]="cameraSelected?.device"
-								(selectionChange)="onCameraSelected($event)"
-							>
-								<mat-option *ngFor="let camera of cameras" [value]="camera.device">
-									{{ camera.label }}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-					</div>
+					<ov-video-devices-select></ov-video-devices-select>
 
 					<!-- Microphone -->
-					<div class="device-container-element">
-						<button
-							mat-icon-button
-							id="microhpone-button"
-							[disabled]="!hasAudioDevices"
-							[class.warn-btn]="isAudioMuted"
-							(click)="toggleMic()"
-						>
-							<mat-icon *ngIf="!isAudioMuted" matTooltip="{{ 'TOOLBAR.MUTE_AUDIO' | translate }}" id="mic">mic</mat-icon>
-							<mat-icon *ngIf="isAudioMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_AUDIO' | translate }}" id="mic_off"
-								>mic_off</mat-icon
-							>
-						</button>
-						<mat-form-field>
-							<mat-label>{{ 'PREJOIN.AUDIO_DEVICE' | translate }}</mat-label>
-							<mat-select
-								[disabled]="isAudioMuted || !hasAudioDevices"
-								[value]="microphoneSelected?.device"
-								(selectionChange)="onMicrophoneSelected($event)"
-							>
-								<mat-option *ngFor="let microphone of microphones" [value]="microphone.device">
-									{{ microphone.label }}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-					</div>
+					<ov-audio-devices-select></ov-audio-devices-select>
+
 				</div>
 
 				<div fxFlex.gt-sm="60%" fxLayout.lt-md="column" fxLayoutAlign="center center" fxFlexFill class="join-btn-container">
