openvidu-components: Added settings directive to webcomponent

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -106,7 +106,7 @@
 			<mat-divider class="divider" *ngIf="!isMinimal && showSettingsButton"></mat-divider>
 
 			<!-- Settings button -->
-			<button *ngIf="!isMinimal && showSettingsButton" mat-menu-item id="settings-btn" (click)="toggleSettings()">
+			<button *ngIf="!isMinimal && showSettingsButton" mat-menu-item id="toolbar-settings-btn" (click)="toggleSettings()">
 				<mat-icon>settings</mat-icon>
 				<span>{{ 'TOOLBAR.SETTINGS' | translate }}</span>
 			</button>
