openvidu-components: Added missing bg effects directive to webcomponent

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -9,6 +9,7 @@
 	[toolbarScreenshareButton]="_toolbarScreenshareButton"
 	[toolbarRecordingButton]="_toolbarRecordingButton"
 	[toolbarFullscreenButton]="_toolbarFullscreenButton"
+	[toolbarBackgroundEffectsButton]="_toolbarBackgroundEffectsButton"
 	[toolbarSettingsButton]="_toolbarSettingsButton"
 	[toolbarLeaveButton]="_toolbarLeaveButton"
 	[toolbarActivitiesPanelButton]="_toolbarActivitiesPanelButton"
