--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
@@ -1,6 +1,11 @@
 <div class="dashboard-container">
 	<mat-toolbar class="header">
 		<span>{{ 'ADMIN.DASHBOARD' | translate }}</span>
+		<div class="refresh-btn">
+			<button matSuffix mat-icon-button aria-label="Refresh" (click)="logout()">
+				<mat-icon>logout</mat-icon>
+			</button>
+		</div>
 	</mat-toolbar>
 
 	<div class="dashboard-body">
@@ -67,7 +72,7 @@
 									(recording.properties.outputMode === 'COMPOSED' ||
 										recording.properties.outputMode === 'COMPOSED_QUICK_START')
 								"
-								[src]="getThumbnailSrc(recording)"
+								[src]="recording.thumbnailB64"
 							/>
 							<div class="video-btns">
 								<button
@@ -77,7 +82,7 @@
 										recording.properties.outputMode !== 'INDIVIDUAL'
 									"
 									mat-icon-button
-									(click)="play(recording)"
+									(click)="play(recording.id)"
 								>
 									<mat-icon id="play" aria-label="Play" title="{{ 'PANEL.RECORDING.PLAY' | translate }}"
 										>play_arrow</mat-icon
