--- a/openvidu-components-angular/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/openvidu-components-angular/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,11 @@
-<p>admin-dashboard works!</p>
+<ov-admin-login *ngIf="!logged" [error]="error" (onLoginButtonClicked)="login($event)"></ov-admin-login>
+
+<ov-admin-dashboard
+	*ngIf="logged"
+	[recordingsList]="recordings"
+	(onLogoutClicked)="onLogoutClicked()"
+	(onRefreshRecordingsClicked)="onRefreshRecordingsClicked()"
+	(onDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
+	(onDownloadRecordingClicked)="onDownloadRecordingClicked($event)"
+
+></ov-admin-dashboard>
