--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -17,6 +17,7 @@
 	[toolbarParticipantsPanelButton]="_toolbarParticipantsPanelButton"
 	[toolbarDisplayLogo]="_toolbarDisplayLogo"
 	[toolbarDisplaySessionName]="_toolbarDisplaySessionName"
+	[toolbarSubtitlesButton]="_toolbarSubtitlesButton"
 	[streamDisplayParticipantName]="_streamDisplayParticipantName"
 	[streamDisplayAudioDetection]="_streamDisplayAudioDetection"
 	[streamSettingsButton]="_streamSettingsButton"
