--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.html
@@ -1,4 +1,4 @@
-<div class="panel-container" id="background-effects-container" fxLayout="column" fxLayoutAlign="space-evenly none">
+<div class="panel-container" id="settings-container" fxLayout="column" fxLayoutAlign="space-evenly none">
 	<div class="panel-header-container" fxFlex="55px" fxLayoutAlign="start center">
 		<h3 class="panel-title">{{ 'PANEL.SETTINGS.TITLE' | translate }}</h3>
 		<button class="panel-close-button" mat-icon-button matTooltip="{{ 'PANEL.CLOSE' | translate }}" (click)="close()">
@@ -8,26 +8,35 @@
 
 	<div class="settings-container" fxFlex="100%" fxLayoutAlign="space-evenly none">
 		<div class="item-menu">
-			<mat-selection-list #settings [multiple]="false">
-				<mat-list-option class="option" [selected]="true" value="general">
+			<mat-selection-list (selectionChange)="onSelectionChanged($event)" [multiple]="false">
+				<mat-list-option class="option" id="general-opt" [selected]="selectedOption === settingsOptions.GENERAL" [value]="settingsOptions.GENERAL">
 					<mat-icon mat-list-icon>manage_accounts</mat-icon>
 					<div mat-line>{{ 'PANEL.SETTINGS.GENERAL' | translate }}</div>
 				</mat-list-option>
-				<mat-list-option class="option" value="video">
+				<mat-list-option class="option" id="video-opt" [selected]="selectedOption === settingsOptions.VIDEO" [value]="settingsOptions.VIDEO">
 					<mat-icon mat-list-icon>videocam</mat-icon>
 					<div mat-line>{{ 'PANEL.SETTINGS.VIDEO' | translate }}</div>
 				</mat-list-option>
-				<mat-list-option class="option" value="audio">
+				<mat-list-option class="option" id="audio-opt" [selected]="selectedOption === settingsOptions.AUDIO" [value]="settingsOptions.AUDIO">
 					<mat-icon mat-list-icon>mic</mat-icon>
 					<div mat-line>{{ 'PANEL.SETTINGS.AUDIO' | translate }}</div>
+				</mat-list-option>
+				<mat-list-option
+					*ngIf="showSubtitles"
+					class="option"
+					[selected]="selectedOption === settingsOptions.SUBTITLES"
+					[value]="settingsOptions.SUBTITLES"
+					id="subtitles-opt"
+				>
+					<mat-icon mat-list-icon>closed_caption</mat-icon>
+					<div mat-line>{{ 'PANEL.SETTINGS.SUBTITLE' | translate }}</div>
 				</mat-list-option>
 			</mat-selection-list>
 		</div>
 
 		<div class="item-content">
-			<div *ngIf="settings.selectedOptions.selected[0]?.value === 'general'">
+			<div *ngIf="selectedOption === settingsOptions.GENERAL">
 				<ov-nickname-input></ov-nickname-input>
-
 				<mat-list>
 					<mat-list-item>
 						<mat-icon mat-list-icon>language</mat-icon>
@@ -36,8 +45,9 @@
 					</mat-list-item>
 				</mat-list>
 			</div>
-			<ov-video-devices-select *ngIf="settings.selectedOptions.selected[0]?.value === 'video'"></ov-video-devices-select>
-			<ov-audio-devices-select *ngIf="settings.selectedOptions.selected[0]?.value === 'audio'"></ov-audio-devices-select>
+			<ov-video-devices-select *ngIf="selectedOption === settingsOptions.VIDEO"></ov-video-devices-select>
+			<ov-audio-devices-select *ngIf="selectedOption === settingsOptions.AUDIO"></ov-audio-devices-select>
+			<ov-subtitles-settings *ngIf="selectedOption === settingsOptions.SUBTITLES && showSubtitles"></ov-subtitles-settings>
 		</div>
 	</div>
 </div>
