--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
@@ -1,6 +1,9 @@
 #call-container, #session-container {
 	height: 100%;
 }
+#session-container {
+	background-color: var(--ov-primary-color);
+}
 
 #pre-join-container {
     height: inherit;
