--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="container" [class.withSubtitles]="subtitlesEnabled">
-	<div id="layout" class="layout">
-		<div class="OT_root OT_publisher" *ngFor="let stream of localParticipant | streams" [ngClass]="{ OV_big: stream.videoEnlarged }">
+	<div id="layout" class="layout" #layout>
+		<div *ngFor="let stream of localParticipant | streams"  [ngClass]="{ OV_big: stream.videoEnlarged }" class="OT_root OT_publisher">
 			<ng-container *ngTemplateOutlet="streamTemplate; context: { $implicit: stream }"></ng-container>
 		</div>
 
