--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -107,7 +107,7 @@
 	height: 100%;
 	position: relative;
 	overflow: hidden;
-	background-color: #000000;
+	background-color: transparent;
 	border-radius: var(--ov-video-radius);
   }
 
