openvidu-components: Updated e2e tests

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
@@ -1,7 +1,7 @@
-#call-container, #session-container {
+#call-container, #vc-container {
 	height: 100%;
 }
-#session-container {
+#vc-container {
 	background-color: var(--ov-primary-color);
 }
 
