openvidu-components: Renamed subtitles components to captions

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.html
@@ -14,5 +14,5 @@
 		</div>
 	</div>
 
-	<ov-subtitles *ngIf="subtitlesEnabled" class="OV_ignored"></ov-subtitles>
+	<ov-captions *ngIf="subtitlesEnabled" class="OV_ignored"></ov-captions>
 </div>
