--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
@@ -6,7 +6,7 @@
 	height: 100%;
 }
 .withSubtitles {
-	height: calc(100% - 75px) !important;
+	height: calc(100% - var(--ov-captions-height, 200px)) !important;
 }
 
 .layout {
