--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.css
@@ -24,3 +24,8 @@
 	text-align: -moz-center;
 	color: var(--ov-panel-text-color);
 }
+
+/* Private css variables */
+#call-container {
+    --ov-captions-height: 250px;
+}
