--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -1,6 +1,6 @@
 #session-container {
 	background-color: var(--ov-primary-color);
-	min-width: 400px;
+	/* min-width: 400px; */
 	height: 100%;
 }
 
@@ -52,7 +52,7 @@
 #toolbar-container,
 #footer-container {
 	background-color: var(--ov-primary-color);
-	min-width: 400px !important;
+	/* min-width: 400px !important; */
 	width: 100%;
 	height: 70px;
 }
@@ -66,7 +66,7 @@
 	bottom: 0;
 	left: 0;
 	z-index: 999999;
-	min-width: 400px !important;
+	/* min-width: 400px !important; */
 }
 
 .reconnecting-container {
