openvidu-components: Used proxy for requesting the recording thumbnail

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
 									(recording.properties.outputMode === 'COMPOSED' ||
 										recording.properties.outputMode === 'COMPOSED_QUICK_START')
 								"
-								[src]="recording.thumbnailB64"
+								[src]="recording.url | thumbnailUrl"
 							/>
 							<div class="video-btns">
 								<button
