--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -20,7 +20,7 @@
 	[recordingActivityRecordingError]="recordingError"
 	[toolbarSettingsButton]="true"
 >
-	<!-- <div *ovActivitiesPanel>HOLA</div> -->
+	<!-- <div *ovActivitiesPanel>HELLO</div> -->
 
 	<!-- <ov-toolbar *ovToolbar [activitiesPanelButton]="false"
 	[chatPanelButton]="false"></ov-toolbar> -->
