openvidu-components: Fixed bug listing recordings on admin page

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 
-		<div *ngIf="recordings.length === 0" class="no-recordings-warn">
+		<div *ngIf="!recordings || recordings.length === 0" class="no-recordings-warn">
 			<span>{{ 'ADMIN.NO_RECORDINGS' | translate }}</span>
 		</div>
 
